# ProcesamientoImagenesTalleres

taller 1/: README.md  taller1  taller1.cpp
taller 1/TallerColor_Proyecto/: .gitignore  CMakeLists.txt  main.cpp
taller 1/TallerColor_Proyecto/include/: ColorConstancy.hpp  ColorConversions.hpp  RadiometricCorrection.hpp  Segmentation.hpp
taller 1/TallerColor_Proyecto/src/: Ejercicio1.cpp  Ejercicio2.cpp  Ejercicio3.cpp  Ejercicio4.cpp  Ejercicio6.cpp  Ejercicio7.cpp
